--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -4,11 +4,43 @@ upstream  telegram_app {
 server {
     listen 80; 
 
-    location / {
+    server_name focus-messanger.com www.focus-messanger.com;
+    return 301 https://$host$request_uri;
+}
+
+server {
+   
+    listen 443 ssl http2;
+    
+    
+    server_name focus-messager www.focus-messanger.com; 
+
+    
+    ssl_certificate /etc/letsencrypt/live/focus-messanger.com/fullchain.pem; 
+
+    ssl_certificate_key /etc/letsencrypt/live/focus-messange.com/privkey.pem;
+
+    
+    include /etc/letsencrypt/options-ssl-nginx.conf; 
+
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;  
+    
+        location / {
+        
         proxy_pass http://telegram_app;
 
+  
+        
         proxy_set_header Host $host;
+        
+    
         proxy_set_header X-Real-IP $remote_addr;
+        
+     
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; 
+        
+       
+        proxy_set_header X-Forwarded-Proto https; 
+
     }
 }
