refactor: reorganize project structure

--- a/requirements.txt
+++ b/requirements.txt
@@ -19,9 +19,11 @@ Jinja2==3.1.6
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
 mdurl==0.1.2
+pathlib==1.0.1
 pyaes==1.6.1
 pyasn1==0.6.1
 pydantic==2.12.1
+pydantic-settings==2.11.0
 pydantic_core==2.41.3
 Pygments==2.19.2
 PyJWT==2.10.1
@@ -46,4 +48,4 @@ uvicorn==0.37.0
 uvloop==0.21.0
 watchfiles==1.1.0
 websockets==15.0.1
-gunicorn==22.0.0
+gunicorn==21.2.0
